fix: own places plus button on small screen sizes

--- a/digitransit-component/packages/digitransit-component-favourite-bar/helpers/styles.scss
+++ b/digitransit-component/packages/digitransit-component-favourite-bar/helpers/styles.scss
@@ -30,7 +30,7 @@ $favourite-highlight-background-color: #F4F4F5;
     @extend .button-shared;
     width: 42.25%;
     max-width: 169px;
-    min-width: 140px;
+    min-width: 110px;
     height: 100%;
     position: relative;
 
